<resources>
    <string name="app_name">Speed Capital Ltd</string>
    <string name="select_LPO">Below Enter Select Branch &#38; enter LOP Number</string>
    <string name="walk_through_one_title">Hello! Welcome to Paramount Bank</string>
    <string name="walk_through_two_title">Track &#38; Save Your Time</string>
    <string name="walk_through_three_title">Manage Resources</string>
    <string name="walk_through_one_desc">You\'ve just started to \n change your life for better</string>
    <string name="walk_through_two_desc">Thanks to great tools</string>
    <string name="walk_through_three_desc">Much faster and in one \n cool place</string>
    <string name="button_get_started">GET STARTED</string>
    <string name="prompt_text_have_account">Already have an account?</string>
    <string name="prompt_text_signin">Sign in</string>
    <string name="create_password">Create Password</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_address_hint">Email Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="full_name_hint">Full Name</string>
    <string name="phone_number_security_check">+254 0722 456 654</string>
    <string name="id_number_or_passport_hint">Id Number / Passport</string>
    <string name="security_complete_title">Verification Successful</string>
    <string name="security_start_title">Security Verification</string>
    <string name="security_start_activity_title">Security Check</string>
    <string name="security_start_activity_start">Start</string>
    <string name="security_complete_continue">Continue</string>
    <string name="security_start_activity_dialog_desc">Please wait, we are verifying your\n phone number</string>
    <string name="security_start_description">To ensure security of your account, your\n verification code must be verified during\n registration process</string>
    <string name="security_complete_description">Thank for joining Paramount Bank.\nWe believe in Growing with our clients</string>
    <string name="speed_capital_invoice_dashboard_title">Speed Capital Invoice</string>
    <string name="my_invoice_payments">My-Invoice Payment</string>
    <string name="invoice_activity">Invoice Status</string>
    <string name="view_all">View All</string>
    <string name="manage_clients">Manage Client</string>
    <string name="invoice_status">Invoice Status</string>
    <string name="client_name">Naivas Karen</string>
    <string name="invoice_description">Pre-approved Payment</string>
    <string name="invoice_amount"> 5,000.00 Ksh</string>
    <string name="invoice_date">20 Nov</string>
    <string name="select_client">Select Client</string>
    <string name="client_slogan">Its your Business without Limitation.</string>
    <string name="client_slogan_description">Apply for a Business Loan Now</string>
    <string name="client_instruction">Thank for join our Paramount Bank.</string>
    <string name="client_instruction_description">Below enter Select Branch &#38; enter LOP number</string>
    <string name="select_branch">Select branch</string>
    <string name="enter_lpo_number_hint">Enter LPO number</string>
    <string name="processing">Processing</string>
    <string name="amount_request">0.00 Ksh</string>
    <string name="lpo_number"><b>50236032</b> <sup><small>LPO</small></sup></string>
    <string name="lpo_sub"><sup><small>LPO</small></sup></string>
    <string name="current_balance">Invoice Amount</string>
    <string name="current_balance_amount">5,000.00 Ksh</string>
    <string name="add_notes">Add Notes</string>
    <string name="invoice_date_label">Invoice Date</string>
    <string name="invoice_date_text">22th Jan 2018</string>
    <string name="invoice_due_date_label">Invoice Due Date</string>
    <string name="invoice_due_date_text">22th Nov 2018</string>
    <string name="proceed">Proceed</string>
    <string name="my_invoice">My invoice</string>
    <string name="naivas">Naivas</string>
    <string name="nakumatt">Nakumatt</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="payment_amount">Ksh 5,000.00</string>
    <string name="done">Done</string>
    <string name="invoice_transaction">Invoice Transaction</string>
    <string name="add_notes_text">Add Notes</string>
    <string name="save">Save</string>
    <string name="make_payment">Make Payment</string>
    <string name="title_activity_invoice_status">InvoiceStatusActivity</string>
    <string name="string_user_id_identifier">user_id</string>
    <string name="string_access_token_identifier">access_token</string>
    <string name="string_authentication_identifier">authentication</string>
    <string name="log_out">Log Out</string>
    <string name="paid">Fully Paid</string>
    <string name="profile_name">Mwaniki Maureen Wambui</string>
    <string name="profile_email">maurynblinsy@gmail.com</string>
    <string name="number">+254 742684965</string>
    <string name="bank_and_credit_cards">Payment Mode</string>
    <string name="manage_client">Manage Client</string>
    <string name="personal_information">Personal Infomation</string>
    <string name="login_and_security">Change Password</string>
    <string name="client_lpo_details">Tuskys </string>
    <string name="lpo_number_text"> LPO no. - 504567</string>
    <string name="new_request">New Request</string>
    <string name="request_description">You requested Ksh 2,500.00 from Cleanshelf  Supermarket</string>
    <string name="request_response">We’ll let Cleanself Supermarket know that you
requested a payment. You can see the  details in your
Invoice Status in case you need them later</string>
    <string name="paid_via_label">Paid Via</string>
    <string name="paid_via_text">M-PESA | 254700789123</string>
    <string name="ref_no">REF. no | 44813905</string>
    <string name="paid_on">Paid on Date | 14 Mar 2018</string>
    <string name="receipt_amount_paid_label">Amount Paid</string>
    <string name="receipt_amount_paid">2,500.00 Ksh</string>
    <string name="receipt_discounted_label">Discounted</string>
    <string name="receipt_discounted">2,500.00 Ksh</string>
    <string name="receipt_total_amount_label">Total Amount</string>
    <string name="receipt_total_amount">5,000.00 Ksh</string>
    <string name="receipt_payment_status_label">Payment Status</string>
    <string name="receipt_payment_status">Successful</string>
    <string name="receipt_payment_status_desc">Your Payment Was Successful</string>
    <string name="maximum_discounted_amount_label">Maximum Discount Amount</string>
    <string name="maximum_discounted_amount">4,750.00 Ksh</string>
    <string name="full_name_identifier">full_name</string>
    <string name="phone_number_identifier">phone_number</string>
    <string name="email_identifier">email</string>
    <string name="id_number_identifier">id_number</string>
    <string name="supplier_id_identifier">supplier_id</string>
    <string name="add_payment_methods_title">Add Payment Methods</string>
    <string name="bank">Bank</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="select_bank">Select Bank</string>
    <string name="select_bank_branch">Select Branch</string>
    <string name="enter_account_name">Enter Account Name</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="add_account">Add Account</string>
    <string name="safaricom_mpesa">Safaricom - Mpesa</string>
    <string name="equitel">Equitel</string>
    <string name="contact_customer_care">Contact Customer Care</string>
    <string name="airtel_money">Airtel Money</string>
    <string name="tkash">Telkom - T-Kash</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="delete_phone_number">Delete</string>
    <string name="account_number_label">Account Number</string>
    <string name="account_name_label">Account Name</string>
    <string name="bank_name_label">Bank Name</string>
    <string name="bank_branch_label">Bank Branch</string>
    <string name="remove_account">Remove Account</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="add_client_activity_title">Add Client</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="request_failed">You Request Failed! </string>
    <string name="loading">Processing . . .</string>
    <string name="lpo_number_invoice_select"><b>454567</b> | lpo number  </string>
    <string name="supplier_id_hint">Supplier Id</string>
    <string name="enter_supplier_id_prompt">Enter Supplier ID</string>
    <string name="unlink">Unlink</string>
    <string name="link">Link</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="send_email">Send Email</string>
    <string name="contact_customer_service">Contact Customer Service</string>
    <string name="no_internet_connection">No Internet \n Connection</string>
    <string name="retry">Retry</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="currency">Ksh </string>
    <string name="no_records_found_you_have_not_requested_invoice_discounting_service">No records found. Its okey to be like this. Records will be found so long as you keep using the app.</string>
    <string name="change_email">Change Email</string>
    <string name="new_email">New Email</string>
    <string name="mode">mode</string>
    <string name="capture_invoice">Capture Invoice</string>
    <string name="request_invoice_part_1">You are about to request KES&#160;  </string>
    <string name="request_invoice_part_2"> &#160; From&#160;  </string>
    <string name="request_invoice_part_3"> &#160;. Applicable fee is KES &#160; </string>
    <string name="request_invoice_part_4">&#160;. Remaining invoice balance is &#160;</string>
    <string name="to_proceed_to_next_step_you_need_to_send_a_picture_of_your_invoice">To proceed to next step. You need to send a picture of your invoice.</string>
    <string name="changepic">ChangePic</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
