<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/change_email"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/tvClientName"
        android:background="@color/red"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:hint="@string/new_email"
        android:textColorHint="@color/red"
        android:layout_below="@id/tvClientName"
        android:id="@+id/tlNewEmail"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtNewEmail"
            android:textColor="@color/vpi__background_holo_dark"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="100dp"
        android:text="@string/cancel"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:id="@+id/btnCancel"
        android:textAllCaps="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/red"
        android:layout_below="@id/tlNewEmail"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="100dp"
        android:id="@+id/btnSave"
        android:layout_alignParentRight="true"
        android:textColor="@color/white"
        android:layout_marginRight="16dp"
        android:padding="16dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_button_red"
        android:text="@string/save"
        android:layout_alignBottom="@id/btnCancel"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true" />


</RelativeLayout>