<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:padding="20dp"
        android:text="@string/add_phone_number"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/tvDialogTitle"
        android:textSize="@dimen/large_text_size"
        android:background="@color/red"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@id/tvDialogTitle"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tlPhoneNumber"
        android:hint="@string/phone_number_hint"
        app:hintAnimationEnabled="true"
        android:textColorHint="@color/colorGreySubHeader"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtPhoneNumber"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="150dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_below="@id/tlPhoneNumber"
        android:layout_alignRight="@id/tlPhoneNumber"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/btnSave"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button_red"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/tlPhoneNumber" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:layout_below="@id/tlPhoneNumber"
        android:layout_alignLeft="@id/tlPhoneNumber"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/btnCancel"
        android:layout_marginBottom="20dp"
        android:background="@color/red"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/tlPhoneNumber" />

</RelativeLayout>