<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/security_start_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/security_start_activity_dialog_desc"
        android:layout_below="@id/tvDialog"
        android:gravity="center"
        android:id="@+id/tvDialogDesc"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/phone_number_security_check"
        android:textStyle="bold"
        android:textSize="@dimen/large_text_size"
        android:gravity="center"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/vpi__background_holo_dark"
        android:id="@+id/tvPhoneNumber"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tvDialogDesc"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_width="match_parent"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@id/tvPhoneNumber"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:indeterminateDrawable="@drawable/progress_bar_style"
        android:indeterminate="true"
        android:layout_height="2dp" />

</RelativeLayout>